--- a/index.html
+++ b/index.html
@@ -7,74 +7,109 @@
     <title>Trivia Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-    <h1>Totally Trivial Trivia!</h1>
 
-    <!-- time remaining going to have to concatinate a number and "seconds" -->
 
-    <div id=instruct>
 
-        <h3 class="instructions"> User has 25 seconds to answer. </h3>
-        <h3></h3>
-        <h3></h3>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                
+            </div>
+            <div class="col order-12">
 
-        <button type="button" id="startGame">Start</button>
 
-    </div>
 
-    <div id="quiz">
 
-        <h2>Time Left: <span id="countdowntimer">25 </span> Seconds</h2>
 
-        <h4>Which fingernail grows the fastest?</h4>
-        <div>
-            <input type="radio" id="index" name="nail" value="incorrect">
-            <label for="index">Index</label>
+
+
+
+
+
+
+
+
+
+            </div>
+            <div class="bac" class="col order-1">
+
+
+                <h1>Totally Trivial Trivia!</h1>
+
+                <!-- time remaining going to have to concatinate a number and "seconds" -->
+
+                <div id=instruct>
+
+                    <h3 class="instructions"> User has 25 seconds to answer questions provided. </h3>
+                    <h3></h3>
+                    <h3></h3>
+
+                    <button type="button" id="startGame">Start</button>
+
+                </div>
+
+                <div id="quiz">
+
+                    <h2>Time Left: <span id="countdowntimer">25 </span> Seconds</h2>
+
+                    <h4>Which fingernail grows the fastest?</h4>
+                    <div>
+                        <input type="radio" id="index" name="nail" value="incorrect">
+                        <label for="index">Index</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="middle" name="nail" value="correct">
+                        <label for="middle">Middle</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="pinky" name="nail" value="incorrect">
+                        <label for="pinky">Pinky</label>
+                    </div>
+
+                    <h4>Fastest production car made to date?</h4>
+                    <div>
+                        <input type="radio" id="tesla" name="car" value="incorrect">
+                        <label for="tesla">Tesla Roadster</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="ferrari" name="car" value="incorrect">
+                        <label for="ferrari">LaFerrari</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="porsche" name="car" value="correct">
+                        <label for="porsche">Porsche 918 Spyder</label>
+                    </div>
+
+                    <h4>Most sold video game to date?</h4>
+                    <div>
+                        <input type="radio" id="tetris" name="video" value="correct">
+                        <label for="tetris">Tetris</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="minecraft" name="video" value="incorrect">
+                        <label for="minecraft">Minecraft</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="gta" name="video" value="incorrect">
+                        <label for="gta">Grand Theft Auto V</label>
+                    </div>
+
+
+                    <button type="button" id="submit">Get Results</button>
+
+                </div>
+
+
+            </div>
         </div>
-        <div>
-            <input type="radio" id="middle" name="nail" value="correct">
-            <label for="middle">Middle</label>
-        </div>
-        <div>
-            <input type="radio" id="pinky" name="nail" value="incorrect">
-            <label for="pinky">Pinky</label>
-        </div>
-
-        <h4>Fastest production car made to date?</h4>
-        <div>
-            <input type="radio" id="tesla" name="car" value="incorrect">
-            <label for="tesla">Tesla Roadster</label>
-        </div>
-        <div>
-            <input type="radio" id="ferrari" name="car" value="incorrect">
-            <label for="ferrari">LaFerrari</label>
-        </div>
-        <div>
-            <input type="radio" id="porsche" name="car" value="correct">
-            <label for="porsche">Porsche 918 Spyder</label>
-        </div>
-
-        <h4>Most sold video game to date?</h4>
-        <div>
-            <input type="radio" id="tetris" name="video" value="correct">
-            <label for="tetris">Tetris</label>
-        </div>
-        <div>
-            <input type="radio" id="minecraft" name="video" value="incorrect">
-            <label for="minecraft">Minecraft</label>
-        </div>
-        <div>
-            <input type="radio" id="gta" name="video" value="incorrect">
-            <label for="gta">Grand Theft Auto V</label>
-        </div>
-
-        <button type="button" id="submit">Get Results</button>
-
     </div>
 
 
@@ -89,58 +124,26 @@
     <div id="finish">
 
         <h2>Results!</h2>
+
         <h3 id=points></h3>
-        <p></p>
+
 
         <button type="button" id="reset">Restart</button>
 
     </div>
 
-    <!-- <h4>Which fingernail grows the fastest?</h4>
-    <div>
-        <input type = "radio" id = "index" name = "nail" value = "incorrect">
-            <label for="index">Index</label>
-    </div>
-    <div>
-        <input type = "radio" id = "middle" name = "nail" value = "correct">
-            <label for="middle">Middle</label>
-    </div>
-    <div>
-        <input type = "radio" id = "pinky" name = "nail" value = "incorrect">
-            <label for="pinky">Pinky</label>
-    </div>
 
-    <h4>Fastest production car made to date?</h4>
-    <div>
-        <input type = "radio" id = "tesla" name = "car" value = "incorrect">
-            <label for="tesla">Tesla Roadster</label>
-    </div>
-    <div>
-        <input type = "radio" id = "ferrari" name = "car" value = "incorrect">
-            <label for="ferrari">LaFerrari</label>
-    </div>
-    <div>
-        <input type = "radio" id = "porsche" name = "car" value = "correct">
-            <label for="porsche">Porsche 918 Spyder</label>
-    </div>
-
-    <h4>Most sold video game to date?</h4>
-    <div>
-        <input type = "radio" id = "tetris" name = "video" value = "correct">
-            <label for="tetris">Tetris</label>
-    </div>
-    <div>
-        <input type = "radio" id = "minecraft" name = "video" value = "incorrect">
-            <label for="minecraft">Minecraft</label>
-    </div>
-    <div>
-        <input type = "radio" id = "gta" name = "video" value = "incorrect">
-            <label for="gta">Grand Theft Auto V</label>
-    </div> -->
 
 
 
     <script src="assets/javascript/app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+
 
 
 
